--- a/src/templates/settings/information.html
+++ b/src/templates/settings/information.html
@@ -1,11 +1,11 @@
-{% extends 'navigation/navigation.html' %}
+{% extends 'base.html' %}
 {% load i18n %}
 
 
 {% block title %}{% translate "Información Confidencial" %}{% endblock %}
 
-{% block app_content %}
-<div class="bg-white shadow-lg rounded-lg p-8 max-w-md text-center">
+{% block content %}
+<div class="bg-white shadow-lg rounded-lg p-8 max-w-md text-center m-auto mt-52">
     <h1 class="text-4xl font-bold text-gray-800 mb-4">{% translate "Información Confidencial" %}</h1>
     <p class="text-gray-700 mb-6">{% translate "Esta es información confidencial." %}</p>
 </div>
